--- a/1.html
+++ b/1.html
@@ -25,6 +25,8 @@
 <br>
 <br>
 <a href="index.html"><button = class ="back">Back</button></a>
+ <p>Given Sithole</p>
+  <p>Contact: 082 346 7253</p>
 </div>
 </div>
 
